[package]
name = "ark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
env_logger = "0.11.3"
etherparse = "0.14.3"
log = "0.4.21"
pnet = "0.34.0"
threadpool = "1.8.1"
tun-tap = "0.1.4"
