[package]
name = "ark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
crossbeam = "0.8.4"
env_logger = "0.11.3"
etherparse = "0.14.3"
hickory-proto = "0.24.1"
log = "0.4.21"
pnet = "0.35.0"
threadpool = "1.8.1"
tun-tap = "0.1.4"
